# odetoolv5

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  release-updater.yml
docs/: APPLICATION_CONSISTENCY_AUDIT.md  AUTO_UPDATE_SETUP.md  HR_ODE_IMPLEMENTATION_GUIDE.md  WORKSTREAM_ROADMAP.md
quality/: latest.json  qa-feedback.json  release-log.json  test-catalog.json
quality/reports/: consistency-latest.json  latest.json  qa-report-20260404-142723.json  qa-report-20260423-193119.json
scripts/: build-installer-to-desktop.ps1  check-test-catalog.mjs  consistency-audit.mjs  create-dev-desktop-launcher.ps1  create-installer-desktop-launcher.ps1  finalize-tauri-icons.py  generate-brand-logo.py  generate-installer-branding.py  generate-tauri-icon-source.py  prepare-updater-release.mjs  record-release-note.mjs  require-release-note-entry.mjs  require-test-evidence.mjs  run-quality-gate.mjs  start-dev-desktop.ps1
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  default.json  surreal-schema.surql  tauri.conf.json  tauri.test-installer.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_server.rs  app_updater.rs  document_parser.rs  lib.rs  main.rs  ticket_ai.rs
src-tauri/windows/: installer-theme.nsi
src/components/: HyperTree.tsx  Icons.tsx  OdeAiMark.tsx
src/features/: README.md
src/hooks/: useBranchClipboardActions.ts  useContextMenuActions.ts  useDesktopMirrorSync.ts  useDraggableModalSurface.ts  (+4 more)
(+211 files in other folders)
