[package]
name = "odetool-pro"
version = "0.1.3"
description = "ODETool Pro with Tauri + Vite + SurrealDB"
authors = ["ODETool Pro"]
edition = "2021"

[lib]
name = "odetool_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
surrealdb = { version = "2.3.10", features = ["kv-surrealkv"] }
uuid = { version = "1.18.0", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pdf-extract = "0.7"
calamine = "0.22"
zip = "2.1"
quick-xml = "0.36"
arboard = "3.6"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
dirs = "6"
base64 = "0.22"
rust_xlsxwriter = "0.81"
argon2 = "0.5"
windows = { version = "0.61.3", features = [
  "Globalization",
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
